examples/input/ssl-passthrough-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passthrough-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: db.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-svc
                port:
                  number: 3306
    - host: redis.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-svc
                port:
                  number: 6379
